--- a/login.html
+++ b/login.html
@@ -29,3 +29,4 @@
 		</div>
 	</div>
 <!-- //login -->
+<div id="7bf14950-d127-482e-9d8d-97360f46bc4c" class="xepan-component xepan-serverside-component" xepan-component="xepan/base/Tool_UserPanel"></div>
