--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-banner -->
+<!--banner -->
 	<div class="banner">
 		<div class="container">
 			<div style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;" class="banner-info animated wow zoomIn animated animated animated animated animated" data-wow-delay=".5s">
