--- a/test.html
+++ b/test.html
@@ -4,15 +4,93 @@
 
 
 
+<div id="f935d520-b3e5-4435-f51a-ae2b0c11ec20" class="xepan-component xepan-serverside-component" xepan-component="xepan/commerce/Tool_Category"></div>
 
 
 
 
 
-<div cart_detail_url="cart" checkout_page="checkout" layout="short_cart" show_customfield="false" id="51b6de0d-76b7-41e4-baa9-485664860dce" class="xepan-component xepan-serverside-component" xepan-component="xepan/commerce/Tool_Cart"></div>
 
 
 
 
 
-<div id="f935d520-b3e5-4435-f51a-ae2b0c11ec20" class="xepan-component xepan-serverside-component" xepan-component="xepan/commerce/Tool_Category"></div><div id="01ef8007-de66-4291-ba2a-26ad67998470" class="xepan-component xepan-serverside-component" xepan-component="xepan/commerce/Tool_ItemImage"></div><div id="5553ef6e-cb07-4ab4-b7f5-c550d055798d" class="xepan-component xepan-serverside-component" xepan-component="xepan/commerce/Tool_Item_Detail"></div>
+
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
+								<ul class="dropdown-menu multi-column columns-3">
+									<div class="row">
+										<div class="col-sm-4">
+											<ul class="multi-column-dropdown">
+												<h6>Men's Wear</h6>
+												<li><a href="products.html">Clothing</a></li>
+												<li><a href="products.html">Wallets</a></li>
+												<li><a href="products.html">Shoes</a></li>
+												<li><a href="products.html">Watches</a></li>
+												<li><a href="products.html">Accessories</a></li>
+											</ul>
+										</div>
+										<div class="col-sm-4">
+											<ul class="multi-column-dropdown">
+												<h6>Women's Wear</h6>
+												<li><a href="products.html">Clothing</a></li>
+												<li><a href="products.html">Wallets,Bags</a></li>
+												<li><a href="products.html">Footwear</a></li>
+												<li><a href="products.html">Watches</a></li>
+												<li><a href="products.html">Accessories</a></li>
+												<li><a href="products.html">Jewellery</a></li>
+												<li><a href="products.html">Beauty & Grooming</a></li>
+											</ul>
+										</div>
+										<div class="col-sm-4">
+											<ul class="multi-column-dropdown">
+												<h6>Kid's Wear</h6>
+												<li><a href="products.html">Kids Home Fashion</a></li>
+												<li><a href="products.html">Boy's Clothing</a></li>
+												<li><a href="products.html">Girl's Clothing</a></li>
+												<li><a href="products.html">Shoes</a></li>
+												<li><a href="products.html">Brand Stores</a></li>
+											</ul>
+										</div>
+										<div class="clearfix"></div>
+									</div>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Furniture <b class="caret"></b></a>
+								<ul class="dropdown-menu multi-column columns-3">
+									<div class="row">
+										<div class="col-sm-4">
+											<ul class="multi-column-dropdown">
+												<h6>Home Collection</h6>
+												<li><a href="furniture.html">Cookware</a></li>
+												<li><a href="furniture.html">Sofas</a></li>
+												<li><a href="furniture.html">Dining Tables</a></li>
+												<li><a href="furniture.html">Shoe Racks</a></li>
+												<li><a href="furniture.html">Home Decor</a></li>
+											</ul>
+										</div>
+										<div class="col-sm-4">
+											<ul class="multi-column-dropdown">
+												<h6>Office Collection</h6>
+												<li><a href="furniture.html">Carpets</a></li>
+												<li><a href="furniture.html">Tables</a></li>
+												<li><a href="furniture.html">Sofas</a></li>
+												<li><a href="furniture.html">Shoe Racks</a></li>
+												<li><a href="furniture.html">Sockets</a></li>
+												<li><a href="furniture.html">Electrical Machines</a></li>
+											</ul>
+										</div>
+										<div class="col-sm-4">
+											<ul class="multi-column-dropdown">
+												<h6>Decorations</h6>
+												<li><a href="furniture.html">Toys</a></li>
+												<li><a href="furniture.html">Wall Clock</a></li>
+												<li><a href="furniture.html">Lighting</a></li>
+												<li><a href="furniture.html">Top Brands</a></li>
+											</ul>
+										</div>
+										<div class="clearfix"></div>
+									</div>
+								</ul>
+							</li>
