--- a/test.html
+++ b/test.html
@@ -19,60 +19,60 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
 								<ul class="dropdown-menu multi-column columns-3">
-									<div class="row">
+<div class="row">
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
-												<h6>Men's Wear</h6>
+<h6>Men's Wear</h6>
 												<li><a href="products.html">Clothing</a></li>
 												<li><a href="products.html">Wallets</a></li>
 												<li><a href="products.html">Shoes</a></li>
 												<li><a href="products.html">Watches</a></li>
 												<li><a href="products.html">Accessories</a></li>
 											</ul>
-										</div>
+</div>
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
-												<h6>Women's Wear</h6>
+<h6>Women's Wear</h6>
 												<li><a href="products.html">Clothing</a></li>
 												<li><a href="products.html">Wallets,Bags</a></li>
 												<li><a href="products.html">Footwear</a></li>
 												<li><a href="products.html">Watches</a></li>
 												<li><a href="products.html">Accessories</a></li>
 												<li><a href="products.html">Jewellery</a></li>
-												<li><a href="products.html">Beauty & Grooming</a></li>
+												<li><a href="products.html">Beauty &amp; Grooming</a></li>
 											</ul>
-										</div>
+</div>
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
-												<h6>Kid's Wear</h6>
+<h6>Kid's Wear</h6>
 												<li><a href="products.html">Kids Home Fashion</a></li>
 												<li><a href="products.html">Boy's Clothing</a></li>
 												<li><a href="products.html">Girl's Clothing</a></li>
 												<li><a href="products.html">Shoes</a></li>
 												<li><a href="products.html">Brand Stores</a></li>
 											</ul>
-										</div>
+</div>
 										<div class="clearfix"></div>
 									</div>
 								</ul>
-							</li>
+</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Furniture <b class="caret"></b></a>
 								<ul class="dropdown-menu multi-column columns-3">
-									<div class="row">
+<div class="row">
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
-												<h6>Home Collection</h6>
+<h6>Home Collection</h6>
 												<li><a href="furniture.html">Cookware</a></li>
 												<li><a href="furniture.html">Sofas</a></li>
 												<li><a href="furniture.html">Dining Tables</a></li>
 												<li><a href="furniture.html">Shoe Racks</a></li>
 												<li><a href="furniture.html">Home Decor</a></li>
 											</ul>
-										</div>
+</div>
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
-												<h6>Office Collection</h6>
+<h6>Office Collection</h6>
 												<li><a href="furniture.html">Carpets</a></li>
 												<li><a href="furniture.html">Tables</a></li>
 												<li><a href="furniture.html">Sofas</a></li>
@@ -80,17 +80,17 @@
 												<li><a href="furniture.html">Sockets</a></li>
 												<li><a href="furniture.html">Electrical Machines</a></li>
 											</ul>
-										</div>
+</div>
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
-												<h6>Decorations</h6>
+<h6>Decorations</h6>
 												<li><a href="furniture.html">Toys</a></li>
 												<li><a href="furniture.html">Wall Clock</a></li>
 												<li><a href="furniture.html">Lighting</a></li>
 												<li><a href="furniture.html">Top Brands</a></li>
 											</ul>
-										</div>
+</div>
 										<div class="clearfix"></div>
 									</div>
 								</ul>
-							</li>
+</li>
