--- a/single.html
+++ b/single.html
@@ -16,66 +16,16 @@ Author URL: http://w3layouts.com
 		<div class="container">
 			<div class="col-md-4 products-left">
 				<div style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;" class="filter-price animated wow slideInUp animated" data-wow-delay=".5s">
-					<h3>Filter By Price</h3>
-					<ul class="dropdown-menu1">
-<li><a href="">								               
-							<div class="ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all" id="slider-range"><div style="left: 10%; width: 50%;" class="ui-slider-range ui-widget-header"></div><a style="left: 10%;" class="ui-slider-handle ui-state-default ui-corner-all" href="#"></a><a style="left: 60%;" class="ui-slider-handle ui-state-default ui-corner-all" href="#"></a></div>							
-							<input id="amount" style="border: 0" type="text"></a></li>	
-					</ul>
-<script type="text/javascript">//<![CDATA[ 
-						$(window).load(function(){
-						 $( "#slider-range" ).slider({
-								range: true,
-								min: 0,
-								max: 100000,
-								values: [ 10000, 60000 ],
-								slide: function( event, ui ) {  $( "#amount" ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
-								}
-					 });
-					$( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) + " - $" + $( "#slider-range" ).slider( "values", 1 ) );
+					<h3>Season Offer</h3>
+				<div style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;" class="men-position animated wow slideInUp animated" data-wow-delay=".5s">
+					<a href="single.html"><img src="images/19.jpg" alt=" " class="img-responsive"></a>
+					<div class="men-position-pos">
+						<h4>New collection</h4>
+						<h5>
+<span>75%</span> Discount</h5>
+					</div>
+				</div>
 
-
-						});//]]>
-						</script><script type="text/javascript" src="js/jquery-ui.min.js"></script><!---->
-</div>
-				<div style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;" class="categories animated wow slideInUp animated" data-wow-delay=".5s">
-					<h3>Categories</h3>
-					<ul class="cate">
-<li>
-<a href="products.html">Best Selling</a> <span>(15)</span>
-</li>
-						<li>
-<a href="products.html">Home Collections</a> <span>(16)</span>
-</li>
-							<ul>
-<li>
-<a href="products.html">Cookware</a> <span>(2)</span>
-</li>
-								<li>
-<a href="products.html">New Arrivals</a> <span>(0)</span>
-</li>
-								<li>
-<a href="products.html">Home Decore</a> <span>(1)</span>
-</li>
-							</ul>
-<li>
-<a href="products.html">Decorations</a> <span>(15)</span>
-</li>
-							<ul>
-<li>
-<a href="products.html">Wall Clock</a> <span>(2)</span>
-</li>
-								<li>
-<a href="products.html">New Arrivals</a> <span>(0)</span>
-</li>
-								<li>
-<a href="products.html">Lighting</a> <span>(1)</span>
-</li>
-								<li>
-<a href="products.html">Top Brands</a> <span>(0)</span>
-</li>
-							</ul>
-</ul>
 </div>
 				<!-- <div id="f935d520-b3e5-4435-f51a-ae2b0c11ec20" class="xepan-component xepan-serverside-component" xepan-component="xepan/commerce/Tool_Category"></div> -->
 				<div style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;" class="men-position animated wow slideInUp animated" data-wow-delay=".5s">
